--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,5 +1,17 @@
+<nav>
+	<% if user_signed_in? %>
+		<ul>
+			<li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
+			<li><%= link_to 'マイページ', user_path(current_user) %></li>
+			<li><%= link_to 'ノート', my_notes_path(current_user) %></li>
+			<li><%= link_to 'ノートを作成する', new_note_path %></li>
+			<li><%= current_user.name %></li>
+		</ul>
+	<% else %>
+		<ul>
+			<li><%= link_to '新規登録', new_user_registration_path %></li>
+			<li><%= link_to 'ログイン', new_user_session %></li>
+		</ul>
+	<% end %>
+</nav>
 <h1>トップページ</h1>
-<% if user_signed_in? %>
-	<%= current_user.name %>
-<% end %>
-<%= link_to 'ログアウト', destroy_user_session_path, method: :delete %>
