--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -1,45 +1,65 @@
-<div>
-	<% @exercises.each do |exercise| %>
-		<div>
-			<table>
-				<tbody>
-					<tr>
-						<td>エクササイズ名: <%= exercise.exercise_name %></td>
-						<td>重量: <%= exercise.weight %> kg</td>
-						<td>セット: <%= exercise.set %></td>
-						<td>レップ: <%= exercise.rep %> 回</td>
-						<td><%= link_to '編集', edit_note_exercise_path(exercise) %></td>
-					</tr>
-					<tr>
-						<% if exercise.weight_two.present? || exercise.set_two.present? || exercise.rep_two.present?  %>
-							<td></td>
-							<td>重量: <%= exercise.weight_two %> kg</td>
-							<td>セット: <%= exercise.set_two %></td>
-							<td>レップ: <%= exercise.rep_two %> 回</td>
-							<td></td>
-						<% end %>
-					</tr>
-					<tr>
-						<% if exercise.weight_three.present? || exercise.set_three.present? || exercise.rep_three.present?  %>
-							<td></td>
-							<td>重量: <%= exercise.weight_three %> kg</td>
-							<td>セット: <%= exercise.set_three %></td>
-							<td>レップ: <%= exercise.rep_three %> 回</td>
-							<td></td>
-						<% end %>
-					</tr>
-					<tr>
-						<% if exercise.weight_four.present? || exercise.set_four.present? || exercise.rep_four.present?  %>
-							<td></td>
-							<td>重量: <%= exercise.weight_four %> kg</td>
-							<td>セット: <%= exercise.set_four %></td>
-							<td>レップ: <%= exercise.rep_four %> 回</td>
-							<td></td>
-						<% end %>
-					</tr>
-				</tbody>
-			</table>
-			<%= exercise.exercise_note %>
+<div class="container">
+	<div class="row">
+		<div class="note-show">
+			<div align="center" class="list-group-item list-group-item-info">
+				<%= @note.name %>
+			</div>
+
+			<% @exercises.each do |exercise| %>
+				<div class="flex-end">
+					<table class="note-exercise-table">
+						<tbody>
+							<tr>
+								<td><strong>種目: <%= exercise.exercise_name %></strong></td>
+							</tr>
+							<tr>
+								<td></td>
+								<td>重量: <%= exercise.weight %> kg</td>
+								<td>セット: <%= exercise.set %></td>
+								<td>レップ: <%= exercise.rep %> 回</td>
+								<td><%= link_to edit_note_exercise_path(exercise) do %>
+										<i id="abc"class="far fa-edit edit-exercise-icon"><span class="edit-text"> 編集する</span></i>
+									<% end %>
+								</td>
+							</tr>
+							<tr>
+								<% if exercise.weight_two.present? || exercise.set_two.present? || exercise.rep_two.present?  %>
+									<td></td>
+									<td>重量: <%= exercise.weight_two %> kg</td>
+									<td>セット: <%= exercise.set_two %></td>
+									<td>レップ: <%= exercise.rep_two %> 回</td>
+									<td></td>
+								<% end %>
+							</tr>
+							<tr>
+								<% if exercise.weight_three.present? || exercise.set_three.present? || exercise.rep_three.present?  %>
+									<td></td>
+									<td>重量: <%= exercise.weight_three %> kg</td>
+									<td>セット: <%= exercise.set_three %></td>
+									<td>レップ: <%= exercise.rep_three %> 回</td>
+									<td></td>
+								<% end %>
+							</tr>
+							<tr>
+								<% if exercise.weight_four.present? || exercise.set_four.present? || exercise.rep_four.present?  %>
+									<td></td>
+									<td>重量: <%= exercise.weight_four %> kg</td>
+									<td>セット: <%= exercise.set_four %></td>
+									<td>レップ: <%= exercise.rep_four %> 回</td>
+									<td></td>
+								<% end %>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+				<% if exercise.exercise_note.present? %>
+					<div class="flex-end">
+						<div class="exercise-note">
+							<%= exercise.exercise_note %>
+						</div>
+					</div>
+				<% end %>
+			<% end %>
 		</div>
-	<% end %>
+	</div>
 </div>
