--- a/app/views/notes/show.html.erb
+++ b/app/views/notes/show.html.erb
@@ -4,6 +4,9 @@
 			<div align="center" class="list-group-item list-group-item-info">
 				<%= @note.name %>
 			</div>
+			<div class="exercises-count" align="center">
+				種目数: <%= @note.exercises.count %>
+			</div>
 
 			<% @exercises.each do |exercise| %>
 				<div class="flex-end">
@@ -17,10 +20,6 @@
 								<td>重量: <%= exercise.weight %> kg</td>
 								<td>セット: <%= exercise.set %></td>
 								<td>レップ: <%= exercise.rep %> 回</td>
-								<td><%= link_to edit_note_exercise_path(exercise) do %>
-										<i id="abc"class="far fa-edit edit-exercise-icon"><span class="edit-text"> 編集する</span></i>
-									<% end %>
-								</td>
 							</tr>
 							<tr>
 								<% if exercise.weight_two.present? || exercise.set_two.present? || exercise.rep_two.present?  %>
@@ -28,7 +27,6 @@
 									<td>重量: <%= exercise.weight_two %> kg</td>
 									<td>セット: <%= exercise.set_two %></td>
 									<td>レップ: <%= exercise.rep_two %> 回</td>
-									<td></td>
 								<% end %>
 							</tr>
 							<tr>
@@ -37,7 +35,6 @@
 									<td>重量: <%= exercise.weight_three %> kg</td>
 									<td>セット: <%= exercise.set_three %></td>
 									<td>レップ: <%= exercise.rep_three %> 回</td>
-									<td></td>
 								<% end %>
 							</tr>
 							<tr>
@@ -46,7 +43,6 @@
 									<td>重量: <%= exercise.weight_four %> kg</td>
 									<td>セット: <%= exercise.set_four %></td>
 									<td>レップ: <%= exercise.rep_four %> 回</td>
-									<td></td>
 								<% end %>
 							</tr>
 						</tbody>
@@ -60,6 +56,11 @@
 					</div>
 				<% end %>
 			<% end %>
+			<div class="add-btn add-new-exercise-btn">
+				<%= link_to edit_note_path(@note) do %>
+					<span class="add-btn-width list-group-item">ノートを編集する</span>
+				<% end %>
+			</div>
 		</div>
 	</div>
 </div>
