--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,29 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+// user------------------------------------
+.profile-photo {
+	border-radius: 50%;
+	object-fit: cover;
+}
+.user-form div {
+	margin: 20px 0;
+}
+.preview-profile-photo > img {
+	border-radius: 50%;
+	width: 100px;
+	height: 100px;
+	object-fit: cover;
+}
+.user-name-field {
+	width: 600px;
+}
+.introduction-field {
+	resize: none;
+	width: 600px;
+}
+// nav------------------------------------
+
 // nav------------------------------------
 .username {
 	color: black;
@@ -50,6 +73,13 @@
 .each-note:hover {
 	box-shadow: 0 0 10px #ddd;
 }
+.group {
+	margin: 10px;
+}
+.list-item {
+	padding: 10px 15px;
+	border-bottom: 1px solid #ddd;
+}
 .each-note-sm-view {
 	font-size: 10px;
 	display: flex;
@@ -63,13 +93,6 @@
 	margin-top: 5px;
 	border: 1px solid #ddd;
 	border-radius: 5px;
-}
-.group {
-	margin: 10px;
-}
-.list-item {
-	padding: 10px 15px;
-	border-bottom: 1px solid #ddd;
 }
 // ---------------------------------------
 
