--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,14 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="container">
+	<div class="row">
+		<%= attachment_image_tag @user, :profile_photo, format: 'jpg', fallback: "user_no_image.png", size: "60x60", class:"profile-photo" %>
+		<%= @user.name %>
+		<%= @user.introduction %>
+		<% if @user == current_user %>
+			<%= link_to 'プロフィールを編集', edit_user_path(@user) %>
+		<% end %>
+		<%= @user.notes.count %>
+		<% @user.notes.each do |note| %>
+			<%= link_to note.name, note_path(note) %>
+		<% end %>
+	</div>
+</div>
