--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <li role="presentation"><a class="username">ユーザー名: <%= current_user.name %></a></li>
       <li role="presentation"><%= link_to 'トップ', root_path %></li>
       <li role="presentation"><%= link_to 'マイページ', user_path(current_user) %></li>
-      <li role="presentation"><%= link_to 'ノート', my_notes_path(current_user) %></li>
+      <li role="presentation"><%= link_to 'マイノート', my_notes_path(current_user) %></li>
       <li role="presentation"><%= link_to 'ノートを作成する', new_note_path %></li>
     </ul>
   <% else %>
