--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,26 @@
 <div class="container">
 	<div class="row">
-		<%= attachment_image_tag @user, :profile_photo, format: 'jpg', fallback: "user_no_image.png", size: "60x60", class:"profile-photo" %>
-		<%= @user.name %>
-		<%= @user.introduction %>
-		<% if @user == current_user %>
-			<%= link_to 'プロフィールを編集', edit_user_path(@user) %>
-		<% end %>
-		<%= @user.notes.count %>
-		<% @user.notes.each do |note| %>
-			<%= link_to note.name, note_path(note) %>
-		<% end %>
+		<div class="user-profile">
+			<div>
+				<%= attachment_image_tag @user, :profile_photo, format: 'jpg', fallback: "user_no_image.png", size: "60x60", class:"profile-photo" %>
+			</div>
+			<div>
+				<strong><%= @user.name %></strong>
+			</div>
+			<div>
+				<%= @user.introduction %>
+			</div>
+			<% if @user == current_user %>
+				<%= link_to 'プロフィールを編集', edit_user_path(@user) %>
+			<% end %>
+		</div>
+		<span class="user-notes-count">
+			<i class="far fa-edit"></i> ワークアウトノート数: <%= @user.notes.count %>
+		</span>
+		<ul class="notes-list">
+			<% @user.notes.each do |note| %>
+			<li><i class="far fa-file-alt"></i> <%= link_to note.name, note_path(note) %></li>
+			<% end %>
+		</ul>
 	</div>
 </div>
