--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -239,3 +239,38 @@
 	margin: 20px 0;
 }
 // ---------------------------------------
+
+// timer----------------------------------
+.timer-main {
+  margin: 20px auto;
+	width: 50vw;
+	padding: 15px;
+	text-align: center;
+}
+
+#timer {
+	height: 120px;
+	line-height: 120px;
+	font-size: 60px;
+	margin-bottom: 15px;
+}
+
+.timer-btn {
+  width: 80px;
+  height: 80px;
+  line-height: 70px;
+  font-weight: bold;
+  cursor: pointer;
+	user-select: none;
+	border-radius: 50%;
+	border: 1px solid black;
+}
+
+.timer-btns {
+  display: flex;
+  justify-content: space-around;
+}
+
+.inactive {
+  opacity: 0.6;
+}
