--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
       <li role="presentation"><%= link_to 'マイページ', user_path(current_user) %></li>
       <li role="presentation"><%= link_to 'マイノート', my_notes_path(current_user) %></li>
       <li role="presentation"><%= link_to 'ノートを作成する', new_note_path %></li>
+      <li role="presentation"><%= link_to 'ストップウォッチ', stopwatch_path %></li>
     </ul>
   <% else %>
     <ul class="nav nav-tabs">
